<resources>
    <string name="app_name">common</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="category_default">category</string>
    <string name="category_cnt">12</string>

    <string name="folder_header">Folder Header</string>

    <string name="create_folder">新建文件夹</string>
    <string name="create_website">添加网站</string>
    <string name="create_image">添加图片</string>
    <string name="create_video">添加视频</string>
    <string name="create_tag">添加标签</string>

    <string name="google_server_client_id">433534959398-lp2fg9q8vhgr6nv4q3dv1n8m8ub27nvi.apps.googleusercontent.com</string>

    <string name="later_item_title">Title: </string>
    <string name="later_item_content">Content: </string>
    <string name="later_item_type">Type: </string>
    <string name="later_item_tag">Tag: </string>
    <string name="update_time">Update Time: </string>

    <string name="todo_dialog_title">Title</string>
    <string name="todo_dialog_desc">Description</string>
    <string name="todo_dialog_date">Date</string>
    <string name="todo_dialog_start_time">Start</string>
    <string name="todo_dialog_end_time">End</string>
    <string name="todo_dialog_add">Add Task</string>

    <string name="delete_icon_description">删除</string>
    <string name="edit_icon_description">修改</string>

    <string name="toolbar_webview">WebView</string>

</resources>