<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="12dp"
    tools:context=".dialogs.AddTodoDialogFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/todo_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/todo_dialog_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/todo_dialog_edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_background"
            android:hint="Enter the todo title here"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/todo_dialog_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/todo_dialog_desc"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/todo_dialog_edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_background"
            android:gravity="top|left"
            android:hint="Enter the todo description here"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/todo_dialog_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/todo_dialog_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/todo_dialog_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_background"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="16sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todo_dialog_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/todo_dialog_start_time"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/todo_dialog_text_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edittext_background"
                    android:gravity="center"
                    android:inputType="time"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textSize="16sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todo_dialog_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/todo_dialog_end_time"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/todo_dialog_text_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edittext_background"
                    android:gravity="center"
                    android:inputType="time"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/todo_dialog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/todo_dialog_add"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>